# Tincture

./: .gitignore  Cargo.toml  LICENSE  Main.py  README.md  makefile  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: CI.yml
python/tincture/: __init__.py  _batch.pyi  _blending.pyi  _color.pyi
src/: lib.rs
src/batch/: batch_instructions.rs  mod.rs  utils.rs
src/color/: blending.rs  consts.rs  mod.rs  simd_casts.rs  utils.rs
tests/: test_alpha_operations.py  test_conversion.py  test_misc.py
tests/color/: test_color_alpha_operations.py  test_color_misc.py
tincture/: __init__.py  _blending.pyi  _color.pyi  color.pyi
