[package]
name = "tincture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tincture"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["num-bigint"] }
num-bigint = "*"
rand = {version = "0.8"}

[profile.release]
opt-level = 3             
codegen-units = 1         
lto = "fat"               
debug = false             
panic = "abort"           
incremental = false
