[package]
name = "tincture"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tincture"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "*"
rand = { version = "*", features = ["small_rng"] }
ahash = "*"
rayon="*"
crossbeam = "*"
simba = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.debug-release]
inherits = "release"
debug = true