[metadata]
name = tincture
description="Tincture is a small performant color library focusing on color manipulation, color data and color conversation"
author = McBrincie212
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = tincture
python_requires = >=3.8
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.3.3
    pytest-cov>=5.0.0

[options.package_data]
tincture = py.typed